--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,21 @@ html, body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", 'Roboto', Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
-a{
+
+a {
     text-decoration: none;
-    color:#000;
+    color: #000;
 }
-a:hover{
-    color:#000;
+
+a:hover {
+    color: #000;
+}
+
+.btn:focus {
+    outline: none;
+    box-shadow: none;
 }
 
 .icon {
@@ -21,6 +28,11 @@ a:hover{
 }
 
 /* navbar */
+
+.navbar-toggler:focus, .navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
 
 .navbar-brand span {
     font-weight: 700;
@@ -72,3 +84,26 @@ a:hover{
     outline: none;
     box-shadow: none;
 }
+
+@media only screen and (max-width: 768px) {
+    .rentals {
+        padding: 3px;
+    }
+}
+
+/*============ BOOTSTRAP BREAK POINTS:
+
+
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+=============*/
