--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ html, body {
 
 a {
     text-decoration: none;
-    color: #000;
+    color: rgb(7, 163, 129);
 }
 
 a:hover {
@@ -21,6 +21,10 @@ a:hover {
 .btn:focus {
     outline: none;
     box-shadow: none;
+}
+
+.feature-icon {
+    filter: invert(37%) sepia(87%) saturate(440%) hue-rotate(138deg) brightness(97%) contrast(99%);
 }
 
 .icon {
