--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,8 @@ Extra (xl) large devices (large desktops, 1200px and up)
 
 =============*/
 
+/* how it works section */
+
 .htwDashedLine {
     position: absolute;
     margin: 45px 80px 0 100px;
@@ -207,7 +209,7 @@ Extra (xl) large devices (large desktops, 1200px and up)
     border-radius: 50%;
     width: 90px;
     height: 90px;
-    background-color: rgb(7, 163, 129);
+    background: rgb(7, 163, 129);
     margin: 0 auto;
 }
 
@@ -221,4 +223,74 @@ Extra (xl) large devices (large desktops, 1200px and up)
     0 0 40px 7px rgb(47, 40, 47), /* middle magenta */
     0 0 40px 7px rgb(6, 245, 245);
     /* outer cyan */
+}
+
+/* fixed background image */
+
+.fixed {
+    background-image: url('/assets/images/car-bg.jpg');
+    z-index: -1;
+}
+
+.dark {
+    background-color: rgba(0, 0, 0, 0.75);
+    color: white;
+    padding: 7rem 2rem;
+}
+
+.fixed-background h3 {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.fixed-background {
+    position: relative;
+    width: 100%;
+}
+
+.fixed-wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -999!important;
+}
+
+.fixed {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: transform;
+}
+
+.btn-lg {
+    border-width: medium;
+    border-radius: 0;
+    padding: .6rem 1.3rem;
+    font-size: 1.1rem;
+}
+
+/* video section */
+
+video {
+    width: 100%;
+    /* max-height: 700px; */
+}
+
+.video-container {
+    position: relative;
+}
+
+.video-container video {
+    position: relative;
+    z-index: 0;
 }
