--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -1,7 +1,10 @@
     a {
         background-color: rgb(7, 163, 129);
+        color: #07a381;
     }
 
     .icon {
         color: rgb(107, 104, 104);
     }
+
+   
