--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ Extra (xl) large devices (large desktops, 1200px and up)
 
 .how-it-works-icon-background:hover {
     transform: scale(.9);
-    box-shadow: 0 0 60px 30px #fff, /* inner white */
+    box-shadow: 0 0 60px 30px #fff, /* inner #000 */
     0 0 40px 7px rgb(47, 40, 47), /* middle magenta */
     0 0 40px 7px rgb(6, 245, 245);
     /* outer cyan */
@@ -189,7 +189,7 @@ Extra (xl) large devices (large desktops, 1200px and up)
 
 .dark {
     background-color: rgba(0, 0, 0, 0.75);
-    color: white;
+    color: #000;
     padding: 7rem 2rem;
 }
 
@@ -248,4 +248,146 @@ video {
 .video-container video {
     position: relative;
     z-index: 0;
+}
+
+/* profile page */
+
+.profile-image {
+    height: 200px;
+    width: 300x;
+    border-radius: 50%;
+}
+
+/* timeline */
+
+/* The actual timeline (the vertical ruler) */
+
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: #808080;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* Container around content */
+
+.timeline-container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+
+/* The circles on the timeline */
+
+.timeline-container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: rgb(28, 71, 136);
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+/* Place the container to the left */
+
+.left {
+    left: 0;
+}
+
+/* Place the container to the right */
+
+.right {
+    left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent rgb(226, 222, 222);
+}
+
+/* Add arrows to the right container (pointing left) */
+
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid #000;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent rgb(226, 222, 222) transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+
+.content {
+    padding: 20px 30px;
+    background-color: rgb(226, 222, 222);
+    position: relative;
+    border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+
+@media screen and (max-width: 600px) {
+    /* Place the timelime to the left */
+    .timeline::after {
+        left: 31px;
+    }
+    /* Full-width containers */
+    .timeline-container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+    /* Make sure that all arrows are pointing leftwards */
+    .timeline-container::before {
+        left: 60px;
+        border: medium solid rgb(226, 222, 222);
+        border-width: 10px 10px 10px 0;
+        border-color: transparent rgb(226, 222, 222) transparent transparent;
+    }
+    /* Make sure all circles are at the same spot */
+    .left::after, .right::after {
+        left: 15px;
+    }
+    /* Make all right containers behave like the left ones */
+    .right {
+        left: 0%;
+    }
 }
