--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,3 +391,28 @@ video {
         left: 0%;
     }
 }
+
+/* comment box desing */
+
+.comment {
+    border: 1px solid rgba(16, 46, 46, 1);
+    background-color: rgba(8, 54, 54, 0.973);
+    border-radius: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    max-width: 500px;
+}
+
+.comment h4, .comment span {
+    display: inline;
+}
+
+.comment p, .comment span {
+    color: rgb(211, 203, 203)
+}
+
+.comment h4 {
+    color: white;
+    font-weight: bold;
+}
